buggery/tests/errors/one_space.bgr

task:
 $ ls # only has one space
